qtscript-opensource-src (5.12.5+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Add Build-Depends-Package field to the symbols files.
  * Bump Qt build-dependencies to 5.12.5.

 -- Scarlett Moore <sgmoore@kde.org>  Fri, 09 Aug 2019 17:59:25 -0700

qtscript-opensource-src (5.12.4+dfsg-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.4.
  * Update Homepage URL.
  * Rewrite debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 02 Jul 2019 16:42:01 +0300

qtscript-opensource-src (5.12.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Drop asm_no_volatile.diff, included in the new release.
  * Rebase s390x_jscore.diff.
  * Bump Qt build-dependencies to 5.12.2.
  * Remove dh_auto_test override, QT_LOGGING_RULES is no longer needed.
  * Install one new header (qtscript-config.h).
  * Add Qt_5.12 version tag to the symbols files.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 26 Mar 2019 23:58:16 +0300

qtscript-opensource-src (5.11.3+dfsg-3) unstable; urgency=medium

  * Add upstream patch to fix build with GCC 8.3 (closes: #924846).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 18 Mar 2019 11:22:13 +0300

qtscript-opensource-src (5.11.3+dfsg-2) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Fix stack base detection on hppa (closes: #916657).
    Thanks John David Anglin for the patch!

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:25:34 -0300

qtscript-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
