@@ -4,6 +4,7 @@ qtscript-opensource-src (5.12.5+dfsg-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Add Build-Depends-Package field to the symbols files.
   * Bump Qt build-dependencies to 5.12.5.
+  * Use debian/not-installed instead of a custom override target.
 
  -- Scarlett Moore <sgmoore@kde.org>  Fri, 09 Aug 2019 17:59:25 -0700
 
